--- a/history/term3/print2.html
+++ b/history/term3/print2.html
@@ -15,7 +15,7 @@
 
 	<button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
 
-	<h2 id="-">新政府の国家づくり</h2>
+	<h3 id="-">新政府の国家づくり</h3>
 	<ul>
 		<li>新政府は，国民一人ひとりが国民としての自覚を持つ，<span class="toggle-text" data-original-text="国民国家"
 				onclick="toggleText(this)"></span>をつくりあげようとした</li>
@@ -24,36 +24,43 @@
 			…国の近代化を進める政策を<span class="toggle-text" data-original-text="富国強兵" onclick="toggleText(this)"></span>政策という
 		</li>
 	</ul>
-	<h2 id="-">徴兵令</h2>
+	<h3 id="-">徴兵令</h3>
 	<ul>
 		<li>1873年，武士にかわり，国民から徴兵した兵士によって近代的な軍隊をつくるために公布された</li>
 		<li>満20歳に達した男子は，士族，平民にかかわらず３年間の兵役に服することになった
 			…多くの兵役免除規定があり，実際に兵役に服した者の多くは，農民の次三男らであった</li>
 		<li>負担の増加をきらい，各地で<span class="toggle-text" data-original-text="徴兵反対一揆" onclick="toggleText(this)"></span>がおこった
-			秩禄処分
-			…政府は廃藩置県で職を失った士族に家禄をあたえたが，
-			1876年には<span class="toggle-text" data-original-text="金禄公債"
-				onclick="toggleText(this)"></span>を交付し，家禄の支給をすべて廃止</li>
+		</li>
+	</ul>
+	<h3 id="-">秩禄処分</h3>
+	<p>…政府は廃藩置県で職を失った士族に家禄をあたえたが，
+		1876年には<span class="toggle-text" data-original-text="金禄公債" onclick="toggleText(this)"></span>を交付し，家禄の支給をすべて廃止
+	</p>
+	<ul>
 		<li>特権を奪われた不満は，士族の反乱につながった<ul>
 				<li>→徴兵を主とする政府軍が勝利をおさめ，近代軍隊が定着</li>
 			</ul>
 		</li>
 	</ul>
-	<h2 id="-">土地制度と税制の改革</h2>
+	<h3 id="-">土地制度と税制の改革</h3>
 	<ul>
 		<li>安定的な財源の確保と統一的な徴税方法の導入のため，新政府は土地制度と税制の改革に着手</li>
 		<li>1871年，田畑の勝手作を認めた</li>
 		<li>翌年，田畑永代売買の禁止をとき，地主と自作農に<span class="toggle-text" data-original-text="地券"
 				onclick="toggleText(this)"></span>をあたえて土地の所有権を認めた</li>
 		<li>1873年，地租改正条例を定め，1879年までにほぼ全国で<span class="toggle-text" data-original-text="地租改正"
-				onclick="toggleText(this)"></span>を実施
-			地租改正
-			(1)課税対象を収穫高から地価に変更
-			(2)物納を金納にあらため，税率は地価の３％
-			(3)土地所有者を納税者とする</li>
+				onclick="toggleText(this)"></span>を実施</li>
+	</ul>
+	<h3 id="-">地租改正</h3>
+	<p>(1)課税対象を収穫高から地価に変更
+		(2)物納を金納にあらため，税率は地価の３％
+		(3)土地所有者を納税者とする</p>
+	<ul>
 		<li>全国一律に貨幣で徴収される近代的な租税制度が確立</li>
-		<li>地租改正による土地所有権の確定は，資本主義発展の基礎を形づくった
-			地租改正反対一揆</li>
+		<li>地租改正による土地所有権の確定は，資本主義発展の基礎を形づくった</li>
+	</ul>
+	<h3 id="-">地租改正反対一揆</h3>
+	<ul>
 		<li>政府は年貢収入を減らさないことを方針としたため，土地所有者の税負担はほとんど変わらなかった</li>
 		<li>地租改正の進め方をめぐって，各地で<span class="toggle-text" data-original-text="地租改正反対一揆"
 				onclick="toggleText(this)"></span>がおこった</li>
@@ -62,16 +69,18 @@
 			</ul>
 		</li>
 	</ul>
-	<h2 id="-">殖産興業</h2>
-	<p>…近代産業の保護・育成をめざしたさまざまな政策をいう
-		統一的な貨幣制度の確立</p>
+	<h3 id="-">殖産興業</h3>
+	<p>…近代産業の保護・育成をめざしたさまざまな政策をいう</p>
+	<h3 id="-">統一的な貨幣制度の確立</h3>
 	<ul>
 		<li>1871年，<span class="toggle-text" data-original-text="新貨条例"
 				onclick="toggleText(this)"></span>を公布し，通貨単位に円・銭・厘の十進法を採用して硬貨を発行した</li>
 		<li>1872年，<span class="toggle-text" data-original-text="大蔵省" onclick="toggleText(this)"></span>が中心となって<span
 				class="toggle-text" data-original-text="国立銀行条例" onclick="toggleText(this)"></span>を公布，近代的な金融制度の基礎をととのえた
-			…兌換制度の確立にはいたらなかった
-			新政府の勧業政策</li>
+			…兌換制度の確立にはいたらなかった</li>
+	</ul>
+	<h3 id="-">新政府の勧業政策</h3>
+	<ul>
 		<li>1870年，<span class="toggle-text" data-original-text="工部省" onclick="toggleText(this)"></span>を新設<ul>
 				<li>→旧幕府や諸藩の鉱山を官営にして，旧幕府の軍需工場や造船所を母体に官営軍事工業の拡充をはかった</li>
 			</ul>
@@ -81,10 +90,12 @@
 						class="toggle-text" data-original-text="官営工場"
 						onclick="toggleText(this)"></span>を経営し，製糸・紡績業など軽工業部門の指導にあたった</li>
 				<li>→<span class="toggle-text" data-original-text="内国勧業博覧会"
-						onclick="toggleText(this)"></span>を開いて新技術の開発と普及をはかった
-					交通・通信制度の整備</li>
+						onclick="toggleText(this)"></span>を開いて新技術の開発と普及をはかった</li>
 			</ul>
 		</li>
+	</ul>
+	<h3 id="-">交通・通信制度の整備</h3>
+	<ul>
 		<li>1872年，新橋・横浜間に官営の<span class="toggle-text" data-original-text="鉄道" onclick="toggleText(this)"></span>が開通</li>
 		<li>海運では，<span class="toggle-text" data-original-text="岩崎弥太郎"
 				onclick="toggleText(this)"></span>の三菱会社を手厚く保護し，近海航路の拡充にあたらせた</li>
@@ -92,8 +103,10 @@
 				class="toggle-text" data-original-text="郵便制度"
 				onclick="toggleText(this)"></span>がととのえられ，国際郵便や国際電信事業にも参加していった
 			…三井，岩崎(三菱)らの商人は，政府の保護を受けばく大な利益をおさめた
-			(<span class="toggle-text" data-original-text="政商" onclick="toggleText(this)"></span>)
-			北海道の開拓事業</li>
+			(<span class="toggle-text" data-original-text="政商" onclick="toggleText(this)"></span>)</li>
+	</ul>
+	<h3 id="-">北海道の開拓事業</h3>
+	<ul>
 		<li>1869年，北海道に<span class="toggle-text" data-original-text="開拓使"
 				onclick="toggleText(this)"></span>を設置し，西洋の農業技術をとりいれた開拓事業が進められた</li>
 		<li>開拓には，各地から移住した士族や，農業兼業の兵士である<span class="toggle-text" data-original-text="屯田兵"
