--- a/history/term3/print1.html
+++ b/history/term3/print1.html
@@ -3,13 +3,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>template</title>
-	<link rel="stylesheet" href="../../0_template/0_style.css" />
+	<link rel="stylesheet" href="../../style.css" />
 </head>
 
 <body>
+
 	<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
 	<h1 id="-">幕府の崩壊と明治維新</h1>
+
+	<div class="nav-box">
+		<nav class="nav-header">
+			<ul class="nav-ul">
+				<li><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
+				<li><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
+				<li><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
+				<li><a class="nav-link" href="print4.html">a</a></li>
+				<li><a class="nav-link" href="print5.html">a</a></li>
+			</ul>
+		</nav>
+	</div>
+
 	<h2 id="-">■課題</h2>
 	<p>どのように江戸幕府は倒れ，新政府が成立したのだろうか。</p>
 
@@ -239,16 +253,6 @@
 		<li>華族・士族・平民は，建前上は平等とされた</li>
 	</ul>
 
-
-	<h1>リンク集</h1>
-	<dev class="nav">
-		<a href="print1.html">①幕府崩壊と明治維新</a>
-		<a href="print2.html">②制度改革と殖産興業政策</a>
-		<a href="print3.html">③文明開化と教育制度の整備</a>
-		<a href="print4.html"></a>
-		<a href="print5.html"></a>
-	</dev class="nav">
-
-	<script src="../../0_template/0_script.js"></script>
+	<script src="../../script.js"></script>
 
 </body>
