--- a/history/term3/template.html
+++ b/history/term3/template.html
@@ -3,7 +3,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>template</title>
-	<link rel="stylesheet" href="../../0_template/0_style.css" />
+	<link rel="stylesheet" href="../../style.css" />
 </head>
 
 <body>
@@ -11,16 +11,16 @@
 
 
 	<h1>リンク集</h1>
-	<dev class="nav">
+	<div class="nav">
 		<a href="print1.html">①幕府崩壊と明治維新</a>
 		<a href="print2.html">②制度改革と殖産興業政策</a>
 		<a href="print3.html">③文明開化と教育制度の整備</a>
 		<a href="print4.html"></a>
 		<a href="print5.html"></a>
-	</dev class="nav">
+	</div class="nav">
 	<!--
 	<iframe src="links.html"></iframe>
 	-->
-	<script src="../../0_template/0_script.js"></script>
+	<script src="../../script.js"></script>
 
 </body>
