レイアウト変更

--- a/history/term3/print1.html
+++ b/history/term3/print1.html
@@ -15,11 +15,11 @@
 	<div class="nav-box">
 		<nav class="nav-header">
 			<ul class="nav-ul">
-				<li><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
-				<li><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
-				<li><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
-				<li><a class="nav-link" href="print4.html">a</a></li>
-				<li><a class="nav-link" href="print5.html">a</a></li>
+				<li class="nav-li"><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
+				<li class="nav-li"><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
+				<li class="nav-li"><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
+				<li class="nav-li"><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
+				<li class="nav-li"><a class="nav-link" href="print5.html">政府専制への批判</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -29,229 +29,238 @@
 
 	<button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
 
-	<h3 id="-">幕府のあと継ぎ問題</h3>
-	<ul>
-		<li>幕府では13代将軍徳川家定に子がなかったため，あと継ぎ問題がおこっていた</li>
-		<li>徳川斉昭・松平慶永・島津斉彬ら有力大名は<span class="toggle-text" data-original-text="一橋慶喜"
-				onclick="toggleText(this)"></span>を立て，幕政改革を進めようとした(一橋派)<ul>
-				<li>→対して井伊直弼ら譜代大名は，紀州藩主<span class="toggle-text" data-original-text="徳川慶福"
-						onclick="toggleText(this)"></span>をおして，幕府の主導権をにぎろうとした(南紀派)</li>
-			</ul>
-		</li>
-		<li>井伊は，慶福をあと継ぎに定めた(14代将軍徳川家茂)</li>
-	</ul>
-	<h3 id="-">尊王論の高まり</h3>
-	<ul>
-		<li>幕府が朝廷の許可なく通商条約を結んだことに対し，尊王論や，攘夷論が高まった</li>
-		<li>また，将軍のあと継ぎをめぐる対立が，外交政策をめぐる対立と結びついた<ul>
-				<li>→一橋派と，井伊の外交方針を批判する<span class="toggle-text" data-original-text="尊攘派"
-						onclick="toggleText(this)"></span>（尊攘派）が結びついて幕府を攻撃</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">専制政治の崩壊</h3>
-	<ul>
-		<li>井伊は，尊攘派の動きをおさえるため，反対派の公家・大名や<span class="toggle-text" data-original-text="吉田松陰"
-				onclick="toggleText(this)"></span>・<span class="toggle-text" data-original-text="橋本左内"
-				onclick="toggleText(this)"></span>ら多数を処罰した</li>
-		<li>（<span class="toggle-text" data-original-text="安政の大獄" onclick="toggleText(this)"></span>）<ul>
-				<li>→強圧的な処置にいきどおった水戸藩などの浪士は1860年３月，井伊を殺害</li>
-			</ul>
-		</li>
-		<li>（<span class="toggle-text" data-original-text="桜田門外の変" onclick="toggleText(this)"></span>）<ul>
-				<li>…この事件以後，幕府の専制的な政治はくずれ始めた</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">安藤信正の方針</h3>
-	<ul>
-		<li>井伊直弼の死後，幕政を担当した老中の<span class="toggle-text" data-original-text="安藤信正"
-				onclick="toggleText(this)"></span>は，<span class="toggle-text" data-original-text="公武合体"
-				onclick="toggleText(this)"></span>（朝廷との融和）の方針をとった<ul>
-				<li>→<span class="toggle-text" data-original-text="孝明天皇" onclick="toggleText(this)"></span>の妹<span
-						class="toggle-text" data-original-text="和宮" onclick="toggleText(this)"></span>を将軍家茂の夫人に迎えた</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">坂下門外の変</h3>
-	<ul>
-		<li>信正の政策は，かえって尊王攘夷派を刺激<ul>
-				<li>→1862年，信正は水戸藩の浪士らにおそわれて負傷し，老中をしりぞいた
-					（<span class="toggle-text" data-original-text="坂下門外の変" onclick="toggleText(this)"></span>）</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">文久の幕政改革</h3>
-	<ul>
-		<li><span class="toggle-text" data-original-text="島津久光"
-				onclick="toggleText(this)"></span>（薩摩藩主の父）は，1862年５月，勅使をともなって江戸に行き，幕政改革を要求した</li>
-		<li>幕府はこれに応じ，一橋慶喜を将軍後見職，松平慶永を政事総裁職，会津藩主松平容保を京都守護職に就任させ，改革を行った（<span class="toggle-text"
-				data-original-text="文久の改革" onclick="toggleText(this)"></span>）
-			…帰途，島津久光の行列を横ぎったイギリス人を薩摩藩士が殺傷した
-			<span class="toggle-text" data-original-text="生麦事件" onclick="toggleText(this)"></span>がおこった
-		</li>
-	</ul>
-	<h3 id="-">京都では</h3>
-	<ul>
-		<li>尊攘派の公家と長州藩が大きな影響力を持つようになった</li>
-		<li>彼らは，攘夷の実行を幕府に迫り，1863年５月10日を期して攘夷を実行することを約束させた<ul>
-				<li>→長州藩は，５月10日から関門海峡を通過する諸外国の船を砲撃し，砲台を強化して海峡を封鎖した</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">八月十八日の政変</h3>
-	<p>…薩摩藩と会津藩は公武合体派の公家と結び，1863年８月18日，朝廷内の実権を尊攘派からうばい，長州藩と<span class="toggle-text" data-original-text="三条実美"
-			onclick="toggleText(this)"></span>ら７人の尊攘派の公家を追放した</p>
-	<h3 id="-">禁門の変（蛤御門の変）</h3>
-	<p>…長州藩は1864年７月，勢力の回復をはかって藩兵を上京させたが，敗北した</p>
-	<h3 id="-">第１次長州戦争</h3>
-	<p>…禁門の変の後，幕府は<span class="toggle-text" data-original-text="第一次長州征討" onclick="toggleText(this)"></span>の軍をおこした</p>
-	<ul>
-		<li>イギリス・フランス・アメリカ・オランダも四国連合艦隊を組織，長州藩の下関海峡の砲台を攻撃して占領した（<span class="toggle-text" data-original-text="下関戦争"
-				onclick="toggleText(this)"></span>）</li>
-	</ul>
-	<h3 id="-">第１次長州戦争の後</h3>
-	<ul>
-		<li>長州藩では保守派が藩政の実権をにぎり，幕府に謝罪した</li>
-		<li>列強は，朝廷に圧力を加えて条約の勅許をえた</li>
-		<li>列強は幕府に対しても長州藩の砲撃の責任を追及した<ul>
-				<li>→1866年，改税約書の調印</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">長州の路線転換</h3>
-	<ul>
-		<li><span class="toggle-text" data-original-text="木戸孝允" onclick="toggleText(this)"></span>（桂小五郎）や<span
-				class="toggle-text" data-original-text="高杉晋作"
-				onclick="toggleText(this)"></span>らは，藩の方針を幕府勢力を倒す路線に転換させようとした<ul>
-				<li>→高杉は<span class="toggle-text" data-original-text="奇兵隊"
-						onclick="toggleText(this)"></span>などの武力を背景に，1865年，保守派から藩政の実権をうばいかえした</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">薩摩藩では</h3>
-	<ul>
-		<li><span class="toggle-text" data-original-text="島津久光" onclick="toggleText(this)"></span>後，<span
-				class="toggle-text" data-original-text="大久保利通" onclick="toggleText(this)"></span>や<span
-				class="toggle-text" data-original-text="西郷隆盛" onclick="toggleText(this)"></span>らが実権をにぎった</li>
-		<li>イギリス公使パークスは薩摩藩を支持した
-			…一方，フランス公使ロッシュは幕府を支援した</li>
-	</ul>
-	<h3 id="-">坂本龍馬と薩長盟約</h3>
-	<ul>
-		<li>1865年４月，幕府は再度長州追討の命令をくだした</li>
-		<li>薩摩藩はひそかに長州藩を支援，<span class="toggle-text" data-original-text="坂本龍馬"
-				onclick="toggleText(this)"></span>らの仲介で，長州藩を援助する<span class="toggle-text" data-original-text="薩長同盟"
-				onclick="toggleText(this)"></span>を成立させた</li>
-	</ul>
-	<h3 id="-">第２次長州戦争</h3>
-	<p>…幕府と長州との戦いでは，幕府側は各地で敗北，将軍家茂の病死を理由に戦いは中止された</p>
-	<h3 id="-">社会の混乱の深まり</h3>
-	<ul>
-		<li>毎年のように凶作や地震がつづき，長州戦争による物価上昇のため，民衆の生活は苦しくなった</li>
-		<li>「<span class="toggle-text" data-original-text="世直し" onclick="toggleText(this)"></span>」をとなえる百姓一揆や打ちこわしが激発
-		</li>
-		<li>1867年には，「<span class="toggle-text" data-original-text="ええじゃないか" onclick="toggleText(this)"></span>」の踊りが流行した
-		</li>
-	</ul>
-	<h3 id="-">徳川慶喜と大政奉還</h3>
-	<ul>
-		<li>15代将軍<span class="toggle-text" data-original-text="徳川慶喜" onclick="toggleText(this)"></span>（一橋）<span
-				class="toggle-text" data-original-text="慶喜" onclick="toggleText(this)"></span>は，幕府政治の立て直しをはかった</li>
-		<li>土佐藩の後藤象二郎や坂本龍馬は，前藩主<span class="toggle-text" data-original-text="山内豊信"
-				onclick="toggleText(this)"></span>（容堂）を通じ，慶喜に大政奉還を建議した<ul>
-				<li>→1867年10月14日，慶喜は<span class="toggle-text" data-original-text="大政奉還"
-						onclick="toggleText(this)"></span>を申し出た
-					…慶喜はいったん政権を返上し，新たな政治体制のなかで主導権をにぎろうとした</li>
-			</ul>
-		</li>
-		<li>薩摩藩と長州藩は，大政奉還と同時に討幕の密勅を得た</li>
-	</ul>
-	<h3 id="-">王政復古の大号令</h3>
-	<ul>
-		<li>1867年12月９日，西郷隆盛や<span class="toggle-text" data-original-text="岩倉具視"
-				onclick="toggleText(this)"></span>らは，<span class="toggle-text" data-original-text="王政復古の大号令"
-				onclick="toggleText(this)"></span>を発し，天皇を中心とする新政府の樹立を宣言した</li>
-		<li>将軍や摂政・関白が廃止され，新たに総裁・議定・参与の<span class="toggle-text" data-original-text="三職"
-				onclick="toggleText(this)"></span>が置かれた</li>
-		<li><span class="toggle-text" data-original-text="小御所会議"
-				onclick="toggleText(this)"></span>では，徳川慶喜に対して官位辞退や領地の返上を命ずる厳しい処分をくだした
-			…慶喜の政治的影響力をのぞくためであった</li>
-	</ul>
-	<h3 id="-">戊辰戦争の勃発</h3>
-	<ul>
-		<li>旧幕府側は，1868年１月，大坂城から京都に進撃したが，<span class="toggle-text" data-original-text="鳥羽・伏見の戦い"
-				onclick="toggleText(this)"></span>にやぶれた<ul>
-				<li>→新政府の東征軍は４月に江戸城を開城させた</li>
-			</ul>
-		</li>
-		<li>旧幕臣の一部は関東各地で抵抗をつづけ，
-			東北・越後の諸藩も<span class="toggle-text" data-original-text="奥羽越列藩同盟" onclick="toggleText(this)"></span>を結成して抵抗した
-			<ul>
-				<li>→９月に会津落城，翌年，<span class="toggle-text" data-original-text="榎本武揚"
-						onclick="toggleText(this)"></span>らも降伏，新政府の国内平定はほぼ完了した</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">明治維新</h3>
-	<ul>
-		<li>王政復古の大号令によって，天皇を中心とする新国家の成立が宣言された</li>
-		<li>統一国家の成立と広い範囲におよぶ諸改革，それにともなう社会の変化を
-			<span class="toggle-text" data-original-text="明治維新" onclick="toggleText(this)"></span>という
-		</li>
-	</ul>
-	<h3 id="-">五箇条の誓文</h3>
-	<p>…1868年３月14日公布，公議世論の尊重，開国和親など，新政府の基本方針を天皇が神々に誓約する形で示した</p>
-	<h3 id="-">新政府と首都東京</h3>
-	<ul>
-		<li>閏４月には政体書を公布，政府の組織を整備し，<span class="toggle-text" data-original-text="太政官"
-				onclick="toggleText(this)"></span>とよばれる中央政府に権力を集中した</li>
-		<li>７月，江戸を東京とあらため，９月には「明治」と改元して一世一元の制を採用した</li>
-		<li>翌年，明治天皇は東京に移り，東京が首都となった</li>
-	</ul>
-	<h3 id="-">版籍奉還</h3>
-	<ul>
-		<li>大名を領主とする諸藩はそのまま残り，新政府の統治は不安定であった
-			…新政府が直接支配したのは，旧幕府の直轄領を引きついだ地域などに限られた</li>
-		<li>1869年，新政府は版籍奉還を各藩に命じた
-			…旧藩主を知藩事に任命したため，各藩には依然として独自の軍事力と徴税権があった</li>
-	</ul>
-	<h3 id="-">新政府の統治</h3>
-	<ul>
-		<li>1871年，<span class="toggle-text" data-original-text="戸籍法"
-				onclick="toggleText(this)"></span>の公布→家（戸）を通じて国民を直接把握し，江戸時代の身分制度を解体</li>
-		<li>藩主と上層の公家→<span class="toggle-text" data-original-text="華族" onclick="toggleText(this)"></span>，藩士と旧幕臣→<span
-				class="toggle-text" data-original-text="士族" onclick="toggleText(this)"></span>，
-			百姓と町人→<span class="toggle-text" data-original-text="平民" onclick="toggleText(this)"></span>となり，帯刀も禁止された</li>
-	</ul>
-	<h3 id="-">「解放令」</h3>
-	<ul>
-		<li>えた・非人などの称を廃止し，身分・職業とも平民と同じとすることを宣言した
-			…実際には多くの面で，これらの人々への江戸時代以来の差別は，根強くつづいた</li>
-	</ul>
-	<h3 id="-">廃藩置県による全国統一</h3>
-	<ul>
-		<li>1871年，新政府は軍事力と財源の集中をはかるため，藩の廃止にふみきった</li>
-		<li>御親兵の武力を背景に全国の藩の廃止と，旧藩主の東京移住，旧藩兵の解散と武器・城郭の接収を命じた</li>
-		<li>一方，中央から府知事・県令（のちに県知事）を派遣して行政を行わせた<ul>
-				<li>→これにより，全国の政治的統一が達成された</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">新政府の官制改革</h3>
-	<ul>
-		<li>太政官は正院・右院・左院の三院制とし，正院のもとに各省が置かれた</li>
-		<li>太政大臣の三条実美，右大臣の岩倉具視らのほかは，薩長土肥の出身者が政府の実権をにぎった<ul>
-				<li>→のちに<span class="toggle-text" data-original-text="藩閥政府"
-						onclick="toggleText(this)"></span>とよばれるもととなった</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">戸籍法と廃藩置県によって</h3>
-	<ul>
-		<li>江戸時代の身分制度は解体</li>
-		<li>華族・士族・平民は，建前上は平等とされた</li>
-	</ul>
+	<div class="hist-main">
+		<h3 id="-">幕府のあと継ぎ問題</h3>
+		<ul>
+			<li>幕府では13代将軍徳川家定に子がなかったため，あと継ぎ問題がおこっていた</li>
+			<li>徳川斉昭・松平慶永・島津斉彬ら有力大名は<span class="toggle-text" data-original-text="一橋慶喜"
+					onclick="toggleText(this)"></span>を立て，幕政改革を進めようとした(一橋派)<ul>
+					<li>→対して井伊直弼ら譜代大名は，紀州藩主<span class="toggle-text" data-original-text="徳川慶福"
+							onclick="toggleText(this)"></span>をおして，幕府の主導権をにぎろうとした(南紀派)</li>
+				</ul>
+			</li>
+			<li>井伊は，慶福をあと継ぎに定めた(14代将軍徳川家茂)</li>
+		</ul>
+		<h3 id="-">尊王論の高まり</h3>
+		<ul>
+			<li>幕府が朝廷の許可なく通商条約を結んだことに対し，尊王論や，攘夷論が高まった</li>
+			<li>また，将軍のあと継ぎをめぐる対立が，外交政策をめぐる対立と結びついた<ul>
+					<li>→一橋派と，井伊の外交方針を批判する<span class="toggle-text" data-original-text="尊攘派"
+							onclick="toggleText(this)"></span>（尊攘派）が結びついて幕府を攻撃</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">専制政治の崩壊</h3>
+		<ul>
+			<li>井伊は，尊攘派の動きをおさえるため，反対派の公家・大名や<span class="toggle-text" data-original-text="吉田松陰"
+					onclick="toggleText(this)"></span>・<span class="toggle-text" data-original-text="橋本左内"
+					onclick="toggleText(this)"></span>ら多数を処罰した</li>
+			<li>（<span class="toggle-text" data-original-text="安政の大獄" onclick="toggleText(this)"></span>）<ul>
+					<li>→強圧的な処置にいきどおった水戸藩などの浪士は1860年３月，井伊を殺害</li>
+				</ul>
+			</li>
+			<li>（<span class="toggle-text" data-original-text="桜田門外の変" onclick="toggleText(this)"></span>）<ul>
+					<li>…この事件以後，幕府の専制的な政治はくずれ始めた</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">安藤信正の方針</h3>
+		<ul>
+			<li>井伊直弼の死後，幕政を担当した老中の<span class="toggle-text" data-original-text="安藤信正"
+					onclick="toggleText(this)"></span>は，<span class="toggle-text" data-original-text="公武合体"
+					onclick="toggleText(this)"></span>（朝廷との融和）の方針をとった<ul>
+					<li>→<span class="toggle-text" data-original-text="孝明天皇" onclick="toggleText(this)"></span>の妹<span
+							class="toggle-text" data-original-text="和宮" onclick="toggleText(this)"></span>を将軍家茂の夫人に迎えた
+					</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">坂下門外の変</h3>
+		<ul>
+			<li>信正の政策は，かえって尊王攘夷派を刺激<ul>
+					<li>→1862年，信正は水戸藩の浪士らにおそわれて負傷し，老中をしりぞいた
+						（<span class="toggle-text" data-original-text="坂下門外の変" onclick="toggleText(this)"></span>）</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">文久の幕政改革</h3>
+		<ul>
+			<li><span class="toggle-text" data-original-text="島津久光"
+					onclick="toggleText(this)"></span>（薩摩藩主の父）は，1862年５月，勅使をともなって江戸に行き，幕政改革を要求した</li>
+			<li>幕府はこれに応じ，一橋慶喜を将軍後見職，松平慶永を政事総裁職，会津藩主松平容保を京都守護職に就任させ，改革を行った（<span class="toggle-text"
+					data-original-text="文久の改革" onclick="toggleText(this)"></span>）
+				…帰途，島津久光の行列を横ぎったイギリス人を薩摩藩士が殺傷した
+				<span class="toggle-text" data-original-text="生麦事件" onclick="toggleText(this)"></span>がおこった
+			</li>
+		</ul>
+		<h3 id="-">京都では</h3>
+		<ul>
+			<li>尊攘派の公家と長州藩が大きな影響力を持つようになった</li>
+			<li>彼らは，攘夷の実行を幕府に迫り，1863年５月10日を期して攘夷を実行することを約束させた<ul>
+					<li>→長州藩は，５月10日から関門海峡を通過する諸外国の船を砲撃し，砲台を強化して海峡を封鎖した</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">八月十八日の政変</h3>
+		<p>…薩摩藩と会津藩は公武合体派の公家と結び，1863年８月18日，朝廷内の実権を尊攘派からうばい，長州藩と<span class="toggle-text" data-original-text="三条実美"
+				onclick="toggleText(this)"></span>ら７人の尊攘派の公家を追放した</p>
+		<h3 id="-">禁門の変（蛤御門の変）</h3>
+		<p>…長州藩は1864年７月，勢力の回復をはかって藩兵を上京させたが，敗北した</p>
+		<h3 id="-">第１次長州戦争</h3>
+		<p>…禁門の変の後，幕府は<span class="toggle-text" data-original-text="第一次長州征討" onclick="toggleText(this)"></span>の軍をおこした
+		</p>
+		<ul>
+			<li>イギリス・フランス・アメリカ・オランダも四国連合艦隊を組織，長州藩の下関海峡の砲台を攻撃して占領した（<span class="toggle-text" data-original-text="下関戦争"
+					onclick="toggleText(this)"></span>）</li>
+		</ul>
+		<h3 id="-">第１次長州戦争の後</h3>
+		<ul>
+			<li>長州藩では保守派が藩政の実権をにぎり，幕府に謝罪した</li>
+			<li>列強は，朝廷に圧力を加えて条約の勅許をえた</li>
+			<li>列強は幕府に対しても長州藩の砲撃の責任を追及した<ul>
+					<li>→1866年，改税約書の調印</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">長州の路線転換</h3>
+		<ul>
+			<li><span class="toggle-text" data-original-text="木戸孝允" onclick="toggleText(this)"></span>（桂小五郎）や<span
+					class="toggle-text" data-original-text="高杉晋作"
+					onclick="toggleText(this)"></span>らは，藩の方針を幕府勢力を倒す路線に転換させようとした<ul>
+					<li>→高杉は<span class="toggle-text" data-original-text="奇兵隊"
+							onclick="toggleText(this)"></span>などの武力を背景に，1865年，保守派から藩政の実権をうばいかえした</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">薩摩藩では</h3>
+		<ul>
+			<li><span class="toggle-text" data-original-text="島津久光" onclick="toggleText(this)"></span>後，<span
+					class="toggle-text" data-original-text="大久保利通" onclick="toggleText(this)"></span>や<span
+					class="toggle-text" data-original-text="西郷隆盛" onclick="toggleText(this)"></span>らが実権をにぎった</li>
+			<li>イギリス公使パークスは薩摩藩を支持した
+				…一方，フランス公使ロッシュは幕府を支援した</li>
+		</ul>
+		<h3 id="-">坂本龍馬と薩長盟約</h3>
+		<ul>
+			<li>1865年４月，幕府は再度長州追討の命令をくだした</li>
+			<li>薩摩藩はひそかに長州藩を支援，<span class="toggle-text" data-original-text="坂本龍馬"
+					onclick="toggleText(this)"></span>らの仲介で，長州藩を援助する<span class="toggle-text" data-original-text="薩長同盟"
+					onclick="toggleText(this)"></span>を成立させた</li>
+		</ul>
+		<h3 id="-">第２次長州戦争</h3>
+		<p>…幕府と長州との戦いでは，幕府側は各地で敗北，将軍家茂の病死を理由に戦いは中止された</p>
+		<h3 id="-">社会の混乱の深まり</h3>
+		<ul>
+			<li>毎年のように凶作や地震がつづき，長州戦争による物価上昇のため，民衆の生活は苦しくなった</li>
+			<li>「<span class="toggle-text" data-original-text="世直し"
+					onclick="toggleText(this)"></span>」をとなえる百姓一揆や打ちこわしが激発
+			</li>
+			<li>1867年には，「<span class="toggle-text" data-original-text="ええじゃないか"
+					onclick="toggleText(this)"></span>」の踊りが流行した
+			</li>
+		</ul>
+		<h3 id="-">徳川慶喜と大政奉還</h3>
+		<ul>
+			<li>15代将軍<span class="toggle-text" data-original-text="徳川慶喜" onclick="toggleText(this)"></span>（一橋）<span
+					class="toggle-text" data-original-text="慶喜" onclick="toggleText(this)"></span>は，幕府政治の立て直しをはかった</li>
+			<li>土佐藩の後藤象二郎や坂本龍馬は，前藩主<span class="toggle-text" data-original-text="山内豊信"
+					onclick="toggleText(this)"></span>（容堂）を通じ，慶喜に大政奉還を建議した<ul>
+					<li>→1867年10月14日，慶喜は<span class="toggle-text" data-original-text="大政奉還"
+							onclick="toggleText(this)"></span>を申し出た
+						…慶喜はいったん政権を返上し，新たな政治体制のなかで主導権をにぎろうとした</li>
+				</ul>
+			</li>
+			<li>薩摩藩と長州藩は，大政奉還と同時に討幕の密勅を得た</li>
+		</ul>
+		<h3 id="-">王政復古の大号令</h3>
+		<ul>
+			<li>1867年12月９日，西郷隆盛や<span class="toggle-text" data-original-text="岩倉具視"
+					onclick="toggleText(this)"></span>らは，<span class="toggle-text" data-original-text="王政復古の大号令"
+					onclick="toggleText(this)"></span>を発し，天皇を中心とする新政府の樹立を宣言した</li>
+			<li>将軍や摂政・関白が廃止され，新たに総裁・議定・参与の<span class="toggle-text" data-original-text="三職"
+					onclick="toggleText(this)"></span>が置かれた</li>
+			<li><span class="toggle-text" data-original-text="小御所会議"
+					onclick="toggleText(this)"></span>では，徳川慶喜に対して官位辞退や領地の返上を命ずる厳しい処分をくだした
+				…慶喜の政治的影響力をのぞくためであった</li>
+		</ul>
+		<h3 id="-">戊辰戦争の勃発</h3>
+		<ul>
+			<li>旧幕府側は，1868年１月，大坂城から京都に進撃したが，<span class="toggle-text" data-original-text="鳥羽・伏見の戦い"
+					onclick="toggleText(this)"></span>にやぶれた<ul>
+					<li>→新政府の東征軍は４月に江戸城を開城させた</li>
+				</ul>
+			</li>
+			<li>旧幕臣の一部は関東各地で抵抗をつづけ，
+				東北・越後の諸藩も<span class="toggle-text" data-original-text="奥羽越列藩同盟"
+					onclick="toggleText(this)"></span>を結成して抵抗した
+				<ul>
+					<li>→９月に会津落城，翌年，<span class="toggle-text" data-original-text="榎本武揚"
+							onclick="toggleText(this)"></span>らも降伏，新政府の国内平定はほぼ完了した</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">明治維新</h3>
+		<ul>
+			<li>王政復古の大号令によって，天皇を中心とする新国家の成立が宣言された</li>
+			<li>統一国家の成立と広い範囲におよぶ諸改革，それにともなう社会の変化を
+				<span class="toggle-text" data-original-text="明治維新" onclick="toggleText(this)"></span>という
+			</li>
+		</ul>
+		<h3 id="-">五箇条の誓文</h3>
+		<p>…1868年３月14日公布，公議世論の尊重，開国和親など，新政府の基本方針を天皇が神々に誓約する形で示した</p>
+		<h3 id="-">新政府と首都東京</h3>
+		<ul>
+			<li>閏４月には政体書を公布，政府の組織を整備し，<span class="toggle-text" data-original-text="太政官"
+					onclick="toggleText(this)"></span>とよばれる中央政府に権力を集中した</li>
+			<li>７月，江戸を東京とあらため，９月には「明治」と改元して一世一元の制を採用した</li>
+			<li>翌年，明治天皇は東京に移り，東京が首都となった</li>
+		</ul>
+		<h3 id="-">版籍奉還</h3>
+		<ul>
+			<li>大名を領主とする諸藩はそのまま残り，新政府の統治は不安定であった
+				…新政府が直接支配したのは，旧幕府の直轄領を引きついだ地域などに限られた</li>
+			<li>1869年，新政府は版籍奉還を各藩に命じた
+				…旧藩主を知藩事に任命したため，各藩には依然として独自の軍事力と徴税権があった</li>
+		</ul>
+		<h3 id="-">新政府の統治</h3>
+		<ul>
+			<li>1871年，<span class="toggle-text" data-original-text="戸籍法"
+					onclick="toggleText(this)"></span>の公布→家（戸）を通じて国民を直接把握し，江戸時代の身分制度を解体</li>
+			<li>藩主と上層の公家→<span class="toggle-text" data-original-text="華族"
+					onclick="toggleText(this)"></span>，藩士と旧幕臣→<span class="toggle-text" data-original-text="士族"
+					onclick="toggleText(this)"></span>，
+				百姓と町人→<span class="toggle-text" data-original-text="平民" onclick="toggleText(this)"></span>となり，帯刀も禁止された
+			</li>
+		</ul>
+		<h3 id="-">「解放令」</h3>
+		<ul>
+			<li>えた・非人などの称を廃止し，身分・職業とも平民と同じとすることを宣言した
+				…実際には多くの面で，これらの人々への江戸時代以来の差別は，根強くつづいた</li>
+		</ul>
+		<h3 id="-">廃藩置県による全国統一</h3>
+		<ul>
+			<li>1871年，新政府は軍事力と財源の集中をはかるため，藩の廃止にふみきった</li>
+			<li>御親兵の武力を背景に全国の藩の廃止と，旧藩主の東京移住，旧藩兵の解散と武器・城郭の接収を命じた</li>
+			<li>一方，中央から府知事・県令（のちに県知事）を派遣して行政を行わせた<ul>
+					<li>→これにより，全国の政治的統一が達成された</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">新政府の官制改革</h3>
+		<ul>
+			<li>太政官は正院・右院・左院の三院制とし，正院のもとに各省が置かれた</li>
+			<li>太政大臣の三条実美，右大臣の岩倉具視らのほかは，薩長土肥の出身者が政府の実権をにぎった<ul>
+					<li>→のちに<span class="toggle-text" data-original-text="藩閥政府"
+							onclick="toggleText(this)"></span>とよばれるもととなった</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">戸籍法と廃藩置県によって</h3>
+		<ul>
+			<li>江戸時代の身分制度は解体</li>
+			<li>華族・士族・平民は，建前上は平等とされた</li>
+		</ul>
+	</div>
 
 	<script src="../../script.js"></script>
 
