--- a/history/term3/print3.html
+++ b/history/term3/print3.html
@@ -17,8 +17,8 @@
 				<li><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
 				<li><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
 				<li><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
-				<li><a class="nav-link" href="print4.html">a</a></li>
-				<li><a class="nav-link" href="print5.html">a</a></li>
+				<li><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
+				<li><a class="nav-link" href="print5.html">政府専制への批判</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -26,79 +26,93 @@
 	<h2 id="-">■課題</h2>
 	<p>欧米の文化や思想は，どのように人々のあいだに広がっていったのだろうか。</p>
 	<button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
-	<h3 id="-">西洋文明による近代化</h3>
-	<ul>
-		<li>政府は，欧米の文化や制度を積極的に導入した</li>
-		<li>1872年，官員が式典などで着用する礼服に洋服を採用</li>
-		<li>1873年からは<span class="toggle-text" data-original-text="太陽暦" onclick="toggleText(this)"></span>を実施</li>
-		<li>１日を24時間，日曜日を休日と定めた
-			…新しい時間の制度は，学校や役所，工場などを通じてしだいに広まったが，農村部では，それまでの太陰暦が使われた</li>
-	</ul>
-	<h3 id="-">文明開化の風潮</h3>
-	<ul>
-		<li><span class="toggle-text" data-original-text="文明開化" onclick="toggleText(this)"></span>に代表される欧米の文化や生活様式が，東京や開港場を中心に広がった</li>
-		<li>洋風の建築物が建てられ，人力車や馬車が走り，ガス灯がかがやいた</li>
-		<li>洋服に帽子，懐中時計を身につけた服装や，肉食も広まった
-			…一方，古い芸術品や芸能が軽視され，貴重な文化遺産の多くが失われた</li>
-	</ul>
-	<h3 id="-">神仏分離令</h3>
-	<p>…新政府は，王政復古の立場から，祭政一致をとなえて神道を国教とする方針を示し，古代以来の神仏習合を禁じて，1868年に<span class="toggle-text" data-original-text="神仏分離令" onclick="toggleText(this)"></span>を出した</p>
-	<h3 id="-">廃仏毀釈</h3>
-	<ul>
-		<li>神仏分離令のため全国的に仏教を排斥する動きがおこり，各地で寺院や仏像が破壊された
-			…仏教界は神道国教化方針に反発するようになり，仏教界の革新にもつながった</li>
-	</ul>
-	<h3 id="-">キリスト教の解禁</h3>
-	<ul>
-		<li>当初は旧幕府のキリシタン禁制の方針を継承し，信仰や伝道(布教)に迫害が加えられた</li>
-		<li>欧米諸国からの抗議を受け，1873年には禁制が廃止，黙認されることとなった<ul>
-				<li>→外国人宣教師による布教活動が活発化</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">教育制度の拡充</h3>
-	<ul>
-		<li>政府は1871年に<span class="toggle-text" data-original-text="文部省" onclick="toggleText(this)"></span>を新設</li>
-		<li>1872年には<span class="toggle-text" data-original-text="学制" onclick="toggleText(this)"></span>が公布，小学校から大学までの学校制度が定められた</li>
-		<li>特に小学校教育の普及に力がそそがれ，全国で小学校がつくられた
-			…６歳以上の男女すべてが就学することとする国民教育をめざした</li>
-	</ul>
-	<h3 id="-">教育令</h3>
-	<ul>
-		<li>学制による性急な教育制度の実施は，学校の建設費や授業料が地元の人々の負担になるなど，地方の実情にあわなかった<ul>
-				<li>→1879年には<span class="toggle-text" data-original-text="教育令" onclick="toggleText(this)"></span>を公布，義務教育年限を短縮するなど，制度の実際化をはかった</li>
-			</ul>
-		</li>
-	</ul>
-	<h3 id="-">高等教育機関として</h3>
-	<ul>
-		<li>1877年，<span class="toggle-text" data-original-text="東京大学" onclick="toggleText(this)"></span>を創設</li>
-		<li>各種の専門学校を設け，外国人教師をまねき，留学生を欧米へ派遣して近代学術をとりいれようとした
-			…高等教育機関の入学者は，男性に限定された</li>
-	</ul>
-	<h3 id="-">女性教育では</h3>
-	<ul>
-		<li>1874年，東京女子師範学校（現在のお茶の水女子大学）が設立され，女性の教員が養成された</li>
-	</ul>
-	<h3 id="-">私立学校の設立</h3>
-	<ul>
-		<li>政府が管理する学校とは別に，福沢諭吉の<span class="toggle-text" data-original-text="慶應義塾" onclick="toggleText(this)"></span>，
-			新島襄の<span class="toggle-text" data-original-text="同志社" onclick="toggleText(this)"></span>など，独自の教育方針を持つ私立の学校も設立
-			…教育の普及と充実は，日本の近代化を進めていくうえで大きな役割をはたした</li>
-	</ul>
-	<h3 id="-">知識人による近代思想の紹介</h3>
-	<ul>
-		<li>人間の平等と民主主義思想を説いた<span class="toggle-text" data-original-text="福沢諭吉" onclick="toggleText(this)"></span>の『<span class="toggle-text" data-original-text="学問のすすめ" onclick="toggleText(this)"></span>』はベストセラーとなった</li>
-		<li><span class="toggle-text" data-original-text="中村正直" onclick="toggleText(this)"></span>が翻訳した『西国立志編』は，青年たちに大きな影響をあたえた</li>
-		<li>1873（明治６）年，森有礼・福沢諭吉・中村正直・西周らは<span class="toggle-text" data-original-text="明六社" onclick="toggleText(this)"></span>を結成，近代思想の普及につとめた</li>
-		<li><span class="toggle-text" data-original-text="中江兆民" onclick="toggleText(this)"></span>が紹介した天賦人権論は，自由民権運動をささえる思想となった</li>
-	</ul>
-	<h3 id="-">出版活動の活性化</h3>
-	<ul>
-		<li>活字印刷の実用化によって出版活動がさかんになり1870年に最初の日刊新聞として『<span class="toggle-text" data-original-text="横浜毎日新聞" onclick="toggleText(this)"></span>』が発刊された
-			…以降，大都市を中心に各種の日刊新聞や雑誌が発行され，世論の形成と指導にあたった</li>
-		<li>翻訳によって「哲学」や「権利」など多くの新しい言葉がつくり出された</li>
-	</ul>
+	<div class="hist-main">
+		<h3 id="-">西洋文明による近代化</h3>
+		<ul>
+			<li>政府は，欧米の文化や制度を積極的に導入した</li>
+			<li>1872年，官員が式典などで着用する礼服に洋服を採用</li>
+			<li>1873年からは<span class="toggle-text" data-original-text="太陽暦" onclick="toggleText(this)"></span>を実施</li>
+			<li>１日を24時間，日曜日を休日と定めた
+				…新しい時間の制度は，学校や役所，工場などを通じてしだいに広まったが，農村部では，それまでの太陰暦が使われた</li>
+		</ul>
+		<h3 id="-">文明開化の風潮</h3>
+		<ul>
+			<li><span class="toggle-text" data-original-text="文明開化"
+					onclick="toggleText(this)"></span>に代表される欧米の文化や生活様式が，東京や開港場を中心に広がった</li>
+			<li>洋風の建築物が建てられ，人力車や馬車が走り，ガス灯がかがやいた</li>
+			<li>洋服に帽子，懐中時計を身につけた服装や，肉食も広まった
+				…一方，古い芸術品や芸能が軽視され，貴重な文化遺産の多くが失われた</li>
+		</ul>
+		<h3 id="-">神仏分離令</h3>
+		<p>…新政府は，王政復古の立場から，祭政一致をとなえて神道を国教とする方針を示し，古代以来の神仏習合を禁じて，1868年に<span class="toggle-text"
+				data-original-text="神仏分離令" onclick="toggleText(this)"></span>を出した</p>
+		<h3 id="-">廃仏毀釈</h3>
+		<ul>
+			<li>神仏分離令のため全国的に仏教を排斥する動きがおこり，各地で寺院や仏像が破壊された
+				…仏教界は神道国教化方針に反発するようになり，仏教界の革新にもつながった</li>
+		</ul>
+		<h3 id="-">キリスト教の解禁</h3>
+		<ul>
+			<li>当初は旧幕府のキリシタン禁制の方針を継承し，信仰や伝道(布教)に迫害が加えられた</li>
+			<li>欧米諸国からの抗議を受け，1873年には禁制が廃止，黙認されることとなった<ul>
+					<li>→外国人宣教師による布教活動が活発化</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">教育制度の拡充</h3>
+		<ul>
+			<li>政府は1871年に<span class="toggle-text" data-original-text="文部省" onclick="toggleText(this)"></span>を新設</li>
+			<li>1872年には<span class="toggle-text" data-original-text="学制"
+					onclick="toggleText(this)"></span>が公布，小学校から大学までの学校制度が定められた</li>
+			<li>特に小学校教育の普及に力がそそがれ，全国で小学校がつくられた
+				…６歳以上の男女すべてが就学することとする国民教育をめざした</li>
+		</ul>
+		<h3 id="-">教育令</h3>
+		<ul>
+			<li>学制による性急な教育制度の実施は，学校の建設費や授業料が地元の人々の負担になるなど，地方の実情にあわなかった<ul>
+					<li>→1879年には<span class="toggle-text" data-original-text="教育令"
+							onclick="toggleText(this)"></span>を公布，義務教育年限を短縮するなど，制度の実際化をはかった</li>
+				</ul>
+			</li>
+		</ul>
+		<h3 id="-">高等教育機関として</h3>
+		<ul>
+			<li>1877年，<span class="toggle-text" data-original-text="東京大学" onclick="toggleText(this)"></span>を創設</li>
+			<li>各種の専門学校を設け，外国人教師をまねき，留学生を欧米へ派遣して近代学術をとりいれようとした
+				…高等教育機関の入学者は，男性に限定された</li>
+		</ul>
+		<h3 id="-">女性教育では</h3>
+		<ul>
+			<li>1874年，東京女子師範学校（現在のお茶の水女子大学）が設立され，女性の教員が養成された</li>
+		</ul>
+		<h3 id="-">私立学校の設立</h3>
+		<ul>
+			<li>政府が管理する学校とは別に，福沢諭吉の<span class="toggle-text" data-original-text="慶應義塾"
+					onclick="toggleText(this)"></span>，
+				新島襄の<span class="toggle-text" data-original-text="同志社"
+					onclick="toggleText(this)"></span>など，独自の教育方針を持つ私立の学校も設立
+				…教育の普及と充実は，日本の近代化を進めていくうえで大きな役割をはたした</li>
+		</ul>
+		<h3 id="-">知識人による近代思想の紹介</h3>
+		<ul>
+			<li>人間の平等と民主主義思想を説いた<span class="toggle-text" data-original-text="福沢諭吉"
+					onclick="toggleText(this)"></span>の『<span class="toggle-text" data-original-text="学問のすすめ"
+					onclick="toggleText(this)"></span>』はベストセラーとなった</li>
+			<li><span class="toggle-text" data-original-text="中村正直"
+					onclick="toggleText(this)"></span>が翻訳した『西国立志編』は，青年たちに大きな影響をあたえた</li>
+			<li>1873（明治６）年，森有礼・福沢諭吉・中村正直・西周らは<span class="toggle-text" data-original-text="明六社"
+					onclick="toggleText(this)"></span>を結成，近代思想の普及につとめた</li>
+			<li><span class="toggle-text" data-original-text="中江兆民"
+					onclick="toggleText(this)"></span>が紹介した天賦人権論は，自由民権運動をささえる思想となった</li>
+		</ul>
+		<h3 id="-">出版活動の活性化</h3>
+		<ul>
+			<li>活字印刷の実用化によって出版活動がさかんになり1870年に最初の日刊新聞として『<span class="toggle-text" data-original-text="横浜毎日新聞"
+					onclick="toggleText(this)"></span>』が発刊された
+				…以降，大都市を中心に各種の日刊新聞や雑誌が発行され，世論の形成と指導にあたった</li>
+			<li>翻訳によって「哲学」や「権利」など多くの新しい言葉がつくり出された</li>
+		</ul>
+	</div>
 
 	<script src="../../script.js"></script>
 
