navの位置は下の方が良い

--- a/history/term3/print2.html
+++ b/history/term3/print2.html
@@ -11,18 +11,6 @@
 
 	<h1 id="-">制度改革と殖産興業政策</h1>
 
-	<div class="nav-box">
-		<nav class="nav-header">
-			<ul class="nav-ul">
-				<li><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
-				<li><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
-				<li><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
-				<li><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
-				<li><a class="nav-link" href="print5.html">政府専制への批判</a></li>
-			</ul>
-		</nav>
-	</div>
-
 	<h2 id="-">■課題</h2>
 	<p>明治初期の改革にはどのようなものがあり，それは近世社会のしくみをどのように変えたのだろうか。</p>
 
@@ -132,6 +120,18 @@
 				…労働力不足をおぎなうため，囚人も動員された</li>
 			<li>アイヌの人々は，開拓によってこれまでの生活の場をうばわれた</li>
 		</ul>
+	</div>
+
+	<div class="nav-box">
+		<nav class="nav-header">
+			<ul class="nav-ul">
+				<li class="nav-li"><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
+				<li class="nav-li"><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
+				<li class="nav-li"><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
+				<li class="nav-li"><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
+				<li class="nav-li"><a class="nav-link" href="print5.html">政府専制への批判</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<script src="../../script.js"></script>
