--- a/history/term3/print5.html
+++ b/history/term3/print5.html
@@ -11,18 +11,6 @@
 
 	<h1 id="-">政府専制への批判</h1>
 
-	<div class="nav-box">
-		<nav class="nav-header">
-			<ul class="nav-ul">
-				<li><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
-				<li><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
-				<li><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
-				<li><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
-				<li><a class="nav-link" href="print5.html">政府専制への批判</a></li>
-			</ul>
-		</nav>
-	</div>
-
 	<h2 id="-">■課題</h2>
 	<p>政府の政治や政策への反対がおこった理由にはどのようなものがあげられるだろうか。</p>
 
@@ -181,6 +169,18 @@
 			<li>板垣退助ら指導部は，自由党の党内の分裂と運動資金不足により，解党を決断した</li>
 			<li>立憲改進党でも解党を主張する者があらわれ，大隈重信らの幹部は党を脱退し，活動は停滞状態へ</li>
 		</ul>
+	</div>
+
+	<div class="nav-box">
+		<nav class="nav-header">
+			<ul class="nav-ul">
+				<li class="nav-li"><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
+				<li class="nav-li"><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
+				<li class="nav-li"><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
+				<li class="nav-li"><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
+				<li class="nav-li"><a class="nav-link" href="print5.html">政府専制への批判</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<script src="../../script.js"></script>
