--- a/history/term3/print3.html
+++ b/history/term3/print3.html
@@ -11,6 +11,18 @@
 
 	<h1 id="-">文明開化と教育制度の整備</h1>
 
+	<div class="nav-box">
+		<nav class="nav-header">
+			<ul class="nav-ul">
+				<li class="nav-li"><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
+				<li class="nav-li"><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
+				<li class="nav-li"><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
+				<li class="nav-li"><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
+				<li class="nav-li"><a class="nav-link" href="print5.html">政府専制への批判</a></li>
+			</ul>
+		</nav>
+	</div>
+
 	<h2 id="-">■課題</h2>
 	<p>欧米の文化や思想は，どのように人々のあいだに広がっていったのだろうか。</p>
 	<button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
@@ -102,17 +114,7 @@
 		</ul>
 	</div>
 
-	<div class="nav-box">
-		<nav class="nav-header">
-			<ul class="nav-ul">
-				<li class="nav-li"><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
-				<li class="nav-li"><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
-				<li class="nav-li"><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
-				<li class="nav-li"><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
-				<li class="nav-li"><a class="nav-link" href="print5.html">政府専制への批判</a></li>
-			</ul>
-		</nav>
-	</div>
+	<a href="#" id="page-top">TOP</a>
 
 	<script src="../../script.js"></script>
 
