--- a/history/term3/template.html
+++ b/history/term3/template.html
@@ -9,6 +9,11 @@
 <body>
 	<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
+	<div class="hist-main">
+
+	</div>
+
+	<a href="#"  id="page-top">TOP</a>
 
 	<script src="../../script.js"></script>
 
