教科書と違う文言の修正

--- a/history/term3/print1.html
+++ b/history/term3/print1.html
@@ -45,7 +45,7 @@
 		<ul>
 			<li>幕府が朝廷の許可なく通商条約を結んだことに対し，尊王論や，攘夷論が高まった</li>
 			<li>また，将軍のあと継ぎをめぐる対立が，外交政策をめぐる対立と結びついた<ul>
-					<li>→一橋派と，井伊の外交方針を批判する<span class="toggle-text" data-original-text="尊攘派"
+					<li>→一橋派と，井伊の外交方針を批判する<span class="toggle-text" data-original-text="尊王攘夷派"
 							onclick="toggleText(this)"></span>（尊攘派）が結びついて幕府を攻撃</li>
 				</ul>
 			</li>
