--- a/history/term3/print2.html
+++ b/history/term3/print2.html
@@ -43,7 +43,7 @@
 			<li>1873年，武士にかわり，国民から徴兵した兵士によって近代的な軍隊をつくるために公布された</li>
 			<li>満20歳に達した男子は，士族，平民にかかわらず３年間の兵役に服することになった
 				…多くの兵役免除規定があり，実際に兵役に服した者の多くは，農民の次三男らであった</li>
-			<li>負担の増加をきらい，各地で<span class="toggle-text" data-original-text="徴兵反対一揆"
+			<li>負担の増加をきらい，各地で<span class="toggle-text" data-original-text="血税一揆"
 					onclick="toggleText(this)"></span>がおこった
 			</li>
 		</ul>
