--- a/history/term3/print4.html
+++ b/history/term3/print4.html
@@ -79,11 +79,12 @@
 					onclick="toggleText(this)"></span>や板垣退助らの留守政府は，朝鮮に西郷を派遣して開国を強く求めることを決定</li>
 			<li>大久保利通らは，国内の整備改良を優先するとしてこれに反対し，決定済みの朝鮮への使節派遣を強引にくつがえした<ul>
 					<li>→西郷や板垣ら５人の参議は，大久保らを批判</li>
-					<li>→政府は分裂し，５人の参議はいっせいに辞職した<h3 id="-">江華島事件</h3>
-						…1875年，朝鮮の江華島付近に示威行動を行った日本軍艦への砲撃事件</li>
+					<li>→政府は分裂し，５人の参議はいっせいに辞職した</li>
 				</ul>
 			</li>
 		</ul>
+		<h3 id="-">江華島事件</h3>
+		…1875年，朝鮮の江華島付近に示威行動を行った日本軍艦への砲撃事件
 		<h3 id="-">日朝修好条規</h3>
 		<ul>
 			<li>西郷らが去ったのち，政府の中心となった大久保は，<span class="toggle-text" data-original-text="江華島事件"
