navをハンバーガーメニューに変更、navのcssは削除なし

--- a/history/term3/print1.html
+++ b/history/term3/print1.html
@@ -8,21 +8,7 @@
 
 <body>
 
-	<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
-
 	<h1 id="-">幕府の崩壊と明治維新</h1>
-
-	<div class="nav-box">
-		<nav class="nav-header">
-			<ul class="nav-ul">
-				<li class="nav-li"><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
-				<li class="nav-li"><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
-				<li class="nav-li"><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
-				<li class="nav-li"><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
-				<li class="nav-li"><a class="nav-link" href="print5.html">政府専制への批判</a></li>
-			</ul>
-		</nav>
-	</div>
 
 	<h2 id="-">■課題</h2>
 	<p>どのように江戸幕府は倒れ，新政府が成立したのだろうか。</p>
@@ -263,6 +249,28 @@
 	</div>
 
 	<a href="#" id="page-top">TOP</a>
+
+	<div class="top-bar">
+		<div class="menu-wrapper">
+			<input type="checkbox" id="menu-toggle" hidden>
+			<label class="menu-icon" for="menu-toggle">
+				<span></span>
+				<span></span>
+				<span></span>
+			</label>
+			<div class="overlay"></div>
+			<nav class="menu">
+				<ul>
+					<li><a href="print1.html">幕府崩壊と明治維新</a></li>
+					<li><a href="print2.html">制度改革と殖産興業政策</a></li>
+					<li><a href="print3.html">文明開化と教育制度の整備</a></li>
+					<li><a href="print4.html">東アジア世界のなかの明治政府</a></li>
+					<li><a href="print5.html">政府専制への批判</a></li>
+				</ul>
+			</nav>
+		</div>
+		<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+	</div>
 
 	<script src="../../script.js"></script>
 
