--- a/history/term3/print2.html
+++ b/history/term3/print2.html
@@ -7,21 +7,7 @@
 </head>
 
 <body>
-	<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
-
 	<h1 id="-">制度改革と殖産興業政策</h1>
-
-	<div class="nav-box">
-		<nav class="nav-header">
-			<ul class="nav-ul">
-				<li class="nav-li"><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
-				<li class="nav-li"><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
-				<li class="nav-li"><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
-				<li class="nav-li"><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
-				<li class="nav-li"><a class="nav-link" href="print5.html">政府専制への批判</a></li>
-			</ul>
-		</nav>
-	</div>
 
 	<h2 id="-">■課題</h2>
 	<p>明治初期の改革にはどのようなものがあり，それは近世社会のしくみをどのように変えたのだろうか。</p>
@@ -43,8 +29,7 @@
 			<li>1873年，武士にかわり，国民から徴兵した兵士によって近代的な軍隊をつくるために公布された</li>
 			<li>満20歳に達した男子は，士族，平民にかかわらず３年間の兵役に服することになった
 				…多くの兵役免除規定があり，実際に兵役に服した者の多くは，農民の次三男らであった</li>
-			<li>負担の増加をきらい，各地で<span class="toggle-text" data-original-text="血税一揆"
-					onclick="toggleText(this)"></span>がおこった
+			<li>負担の増加をきらい，各地で<span class="toggle-text" data-original-text="血税一揆" onclick="toggleText(this)"></span>がおこった
 			</li>
 		</ul>
 		<h3 id="-">秩禄処分</h3>
@@ -136,6 +121,27 @@
 
 	<a href="#" id="page-top">TOP</a>
 
-	<script src="../../script.js"></script>
+	<div class="top-bar">
+		<div class="menu-wrapper">
+			<input type="checkbox" id="menu-toggle" hidden>
+			<label class="menu-icon" for="menu-toggle">
+				<span></span>
+				<span></span>
+				<span></span>
+			</label>
+			<div class="overlay"></div>
+			<nav class="menu">
+				<ul>
+					<li><a href="print1.html">幕府崩壊と明治維新</a></li>
+					<li><a href="print2.html">制度改革と殖産興業政策</a></li>
+					<li><a href="print3.html">文明開化と教育制度の整備</a></li>
+					<li><a href="print4.html">東アジア世界のなかの明治政府</a></li>
+					<li><a href="print5.html">政府専制への批判</a></li>
+				</ul>
+			</nav>
+		</div>
+		<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+	</div>
 
+	<script src="../../script.js"></script>
 </body>
