--- a/history/term3/template.html
+++ b/history/term3/template.html
@@ -8,6 +8,18 @@
 
 <body>
 	<button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+		
+	<div class="nav-box">
+		<nav class="nav-header">
+			<ul class="nav-ul">
+				<li class="nav-li"><a class="nav-link" href="print1.html">幕府崩壊と<br>明治維新</a></li>
+				<li class="nav-li"><a class="nav-link" href="print2.html">制度改革と<br>殖産興業政策</a></li>
+				<li class="nav-li"><a class="nav-link" href="print3.html">文明開化と<br>教育制度の整備</a></li>
+				<li class="nav-li"><a class="nav-link" href="print4.html">東アジア世界のなかの明治政府</a></li>
+				<li class="nav-li"><a class="nav-link" href="print5.html">政府専制への批判</a></li>
+			</ul>
+		</nav>
+	</div>
 
 	<div class="hist-main">
 
