--- a/english/term3/print-test/print12.html
+++ b/english/term3/print-test/print12.html
@@ -104,7 +104,7 @@
 
 	<div class="controls">
 		<button id="startBtn">スタート</button>
-		<button id="answerBtn" style="display: none;">答えを表示</button>
+		<button id="answerBtn" style="display: none;">答え</button>
 		<button id="restartBtn" style="display: none;">もう一度</button>
 	</div>
 	<button id="toggleModeBtn">モード切り替え</button>
@@ -112,7 +112,7 @@
 
 	<script>
 		const wordList = `
-eldarly,高齢の
+elderly,高齢の
 disability,障害
 retirement,退職
 workforce,総労働人口
