不要ファイル削除・index.html追加・歴史追加

--- a/history/term3/print3.html
+++ b/history/term3/print3.html
@@ -118,6 +118,8 @@
 					<li><a href="print3.html">文明開化と教育制度の整備</a></li>
 					<li><a href="print4.html">東アジア世界のなかの明治政府</a></li>
 					<li><a href="print5.html">政府専制への批判</a></li>
+					<li><a href="print6.html">立憲政治の成立</a></li>
+					<li><a href="print7.html">対外関係の変容と日清戦争</a></li>
 				</ul>
 			</nav>
 		</div>
